kubernetes/apps/network/external-services/app/unifi/endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: unifi
subsets:
- addresses:
  - ip: 10.90.254.1
  ports:
  - name: http
    port: 443
    protocol: TCP
