kubernetes/apps/network/external-services/app/unifi/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: unifi
spec:
  type: ClusterIP
  ports:
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
